2004-05-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVerison.pm: Ignore SourceN for Type "bundle", "nosource", "dummy".

2004-05-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm:  adjust the Provides in the system-perl packages

2004-05-13  Daniel Macks  <dmacks@netspace.org>

	* Command.pm: Fixed rm_f to not return failure for non-existent	files.
	Made _expand omit globs that match nothing, undefs, and blanks.

2004-05-13  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Command.pm: Fix Failed: can't symlink package due to perl's -e
	returning false if a file is a dangling symlink. Thanks to Ben Hines.
	
2004-05-11  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed problem where any commented-out line ending
	with "<<" in a heredoc was treated as the beginning of a nested
	heredoc.

2004-05-10  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: overhauled Source(N) <-> *(N)* correspondence checks.

2004-05-10  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: dumpinfo: status, allversions: note if binary avail.

2004-05-04  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed bug in Depends processing where packages
	with version requirements could get dropped if field had conditionals.

2004-05-03  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: dumpinfo: status: add "have-deb", allversions: add
	"b" if .deb file is present.

2004-05-03  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: dumpinfo: fixed display of SourceN in all-fields
	mode, fixed display of -f sources, added "status" mode (is latest?
	is installed?), added "allversions" mode (list all versions and
	whether installed), all typically multiline fields always
	displayed multiline and indented 1 additional space, all typically
	single-line fields always displayed in-line, documented
	pseudofields.
	* Services.pm: version_cmp: added "<=>" op, added warning for
	unknown op. Implemented sort_versions.
